# OnboardPowerManagement

./: .gitignore  CMakeLists.txt  README.md
docs/: modules.md
docs/analysis/: config_values.md  inputs.md  outputs.md
docs/design/: architecture.md  detailed_design.md  modules.md  topics.md
docs/requirements/: conops.md  functional.md  non_functional.md  scope.md
docs/verification/: verification_matrix.md  vnv_plan.md
docs/verification/test_specs/: UT-PWR-001-B.md  UT-PWR-002-A.md  UT-PWR-003-A.md  UT-PWR-003-B.md  UT-PWR-003-C.md
docs/verification/test_specs/analysis/: AN-PWR-001.md  AN-PWR-005.md  AN-PWR-507.md  AN-PWR-509.md  AN-PWR-511.md  AN-PWR-512.md  AN-PWR-513.md  AN-PWR-514.md  AN-PWR-515.md  AN-PWR-516.md
docs/verification/test_specs/functional_tests/: FT-PWR-001.md  FT-PWR-002.md  FT-PWR-011.md  FT-PWR-014.md  FT-PWR-016.md  FT-PWR-017.md  FT-PWR-018.md  FT-PWR-019.md  FT-PWR-020.md  FT-PWR-021.md  FT-PWR-022.md  FT-PWR-501.md  FT-PWR-503.md
docs/verification/test_specs/integration_tests/: IT-PWR-004.md  IT-PWR-006.md  IT-PWR-009.md  IT-PWR-012.md  IT-PWR-015.md  IT-PWR-018.md  IT-PWR-019.md  IT-PWR-020.md  IT-PWR-501.md  IT-PWR-502.md  IT-PWR-506.md  IT-PWR-512.md
docs/verification/test_specs/unit_tests/: UT-PWR-001-A.md  UT-PWR-002-B.md  UT-PWR-003-A.md  UT-PWR-003-B.md  UT-PWR-003-D.md  UT-PWR-005-A.md  UT-PWR-005-B.md  UT-PWR-007-A.md  UT-PWR-007-B.md  UT-PWR-008-A.md  UT-PWR-008-B.md  UT-PWR-010-A.md  UT-PWR-010-B.md  UT-PWR-011-A.md  UT-PWR-011-B.md  UT-PWR-013-A.md  UT-PWR-013-B.md  UT-PWR-014-A.md  UT-PWR-014-B.md  UT-PWR-016-A.md  UT-PWR-022-A.md  UT-PWR-024-A.md
onboard_power_management/: CMakeLists.txt
onboard_power_management/app/: CMakeLists.txt
onboard_power_management/cfg/: const.cfg
onboard_power_management/core/battery_monitor/: CMakeLists.txt
onboard_power_management/core/fault_injector/: CMakeLists.txt  FaultInjector.cpp
onboard_power_management/core/power_manager/: CMakeLists.txt  PowerManager.cpp  PowerManager.hpp
onboard_power_management/core/sensor_health_manager/: CMakeLists.txt  SensorHealthManager.hpp
onboard_power_management/core/subsystem_controller/: CMakeLists.txt
onboard_power_management/core/telemetry_logger/: CMakeLists.txt  TelemetryLogger.cpp
onboard_power_management/dds/: CMakeLists.txt  DDSContext.hpp  DDSCoreAdapter.cpp  GenericPublisher.hpp
onboard_power_management/dds/idl/: BatteryMeasurements.idl  LoadStatus.idl  LocalSensorHealthStatus.idl  PowerCommand.idl  SensorHealthStatus.idl
onboard_power_management/dds/include/: DDSCoreAdapter.hpp  DDSQoSBuilder.hpp  GenericListener.hpp  GenericPublisher.hpp
onboard_power_management/dds/src/: DDSCoreAdapter.cpp  DDSQoSBuilder.cpp
onboard_power_management/include/types/: BatteryMeasurements.hpp
onboard_power_management/infrastructure/logging/: CMakeLists.txt  LogBackend.cpp  LogBackend.hpp  LogConfig.hpp
onboard_power_management/types/: LocalSensorHealthStatus.hpp
src/: CMakeLists.txt
src/app/: main.cpp
src/dds/: DDSContext.cpp
src/dds/idl/: BatteryMeasurements.idl  LoadStatus.idl  PowerCommand.idl
src/domain/battery_monitor/: BatteryMonitor.cpp  BatteryMonitor.hpp  CMakeLists.txt
src/domain/fault_injector/: CMakeLists.txt  FaultInjector.cpp  FaultInjector.hpp
src/domain/power_manager/: CMakeLists.txt  PowerManager.cpp  PowerManager.hpp
src/domain/sensor_health_manager/: CMakeLists.txt  SensorHealthManager.cpp  SensorHealthManager.hpp
src/domain/subsystem_controller/: CMakeLists.txt  SubsystemController.cpp  SubsystemController.hpp
src/domain/telemetry_logger/: CMakeLists.txt  TelemetryLogger.cpp  TelemetryLogger.hpp
src/include/types/: PowerCommand.hpp  SensorHealthStatus.hpp
src/infrastructure/config/: CMakeLists.txt  Config.cpp  Config.hpp
src/infrastructure/logging/: Log.hpp
src/types/: BatteryMeasurements.cxx  BatteryMeasurements.hpp  BatteryMeasurementsPubSubTypes.h  CMakeLists.txt  LoadStatus.h  LoadStatus.hpp  LoadStatusPubSubTypes.cxx  LocalSensorHealthStatus.hpp  PowerCommand.h  PowerCommand.hpp  PowerCommandPubSubTypes.cxx  SensorHealthStatus.hpp  SensorHealthStatusPubSubTypes.cxx
tests/adapters/: CMakeLists.txt  PowerManagerTestAdapter.cpp  PowerManagerTestAdapter.hpp
tests/cfg/: test_const.cfg
tests/helpers/: BatteryMeasurementsBuilder.cpp  BatteryMeasurementsBuilder.hpp  CMakeLists.txt  SensorHealthStatusBuilder.cpp  SensorHealthStatusBuilder.hpp
tests/unit_tests/: CMakeLists.txt  PowerManagerTests.cpp
